--- a/conky.conf
+++ b/conky.conf
@@ -172,9 +172,8 @@ $hr
 ${color green}Disks
 ${color slate grey}${diskiograph /dev/sda 16,220}
 ${color slate grey}${diskiograph /dev/sdb 16,220}
-# You may need to modify the cut bit below to match your disks
-${color lightblue}/dev/sda temp: $color${execpi 600 sudo hddtemp /dev/sda|cut -c 34-35}C 
-${color lightblue}/dev/sdb temp: $color${execpi 600 sudo hddtemp /dev/sdb|cut -c 34-35}C
+${color lightblue}/dev/sda temp: $color${execpi 600 sudo hddtemp -n /dev/sda}C 
+${color lightblue}/dev/sdb temp: $color${execpi 600 sudo hddtemp -n /dev/sdb}C
 $hr
 ${color green}Networking 
 ${color lightblue}SSID:        $color ${wireless_essid wlan0}
